--- a/src/main/java/com/mycompany/pos/Screens/Dialog/ThongTinSanPhamDialog.form
+++ b/src/main/java/com/mycompany/pos/Screens/Dialog/ThongTinSanPhamDialog.form
@@ -47,12 +47,12 @@
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtTitle1" pref="300" max="32767" attributes="0"/>
+                      <Component id="txtPrice" pref="300" max="32767" attributes="0"/>
                       <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                       <Component id="txtTitle" max="32767" attributes="0"/>
                       <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtTitle3" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txtReference" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
@@ -60,10 +60,10 @@
                           <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                              <Component id="jComboBox1" min="-2" pref="160" max="-2" attributes="0"/>
+                              <Component id="cbStockable" min="-2" pref="160" max="-2" attributes="0"/>
                               <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtTitle4" alignment="0" pref="334" max="32767" attributes="0"/>
-                              <Component id="txtTitle2" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtSlug" alignment="0" pref="334" max="32767" attributes="0"/>
+                              <Component id="txtVAT" alignment="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
@@ -98,7 +98,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="txtTitle" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
-                      <Component id="jComboBox1" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
+                      <Component id="cbStockable" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -107,8 +107,8 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtTitle1" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
-                      <Component id="txtTitle2" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
+                      <Component id="txtPrice" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
+                      <Component id="txtVAT" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -117,8 +117,8 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtTitle3" alignment="3" min="-2" pref="253" max="-2" attributes="0"/>
-                      <Component id="txtTitle4" alignment="3" min="-2" pref="253" max="-2" attributes="0"/>
+                      <Component id="txtReference" alignment="3" min="-2" pref="253" max="-2" attributes="0"/>
+                      <Component id="txtSlug" alignment="3" min="-2" pref="253" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="39" max="32767" attributes="0"/>
               </Group>
@@ -126,9 +126,9 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JTextField" name="txtTitle3">
+        <Component class="javax.swing.JTextField" name="txtReference">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtTitle1">
+        <Component class="javax.swing.JTextField" name="txtPrice">
         </Component>
         <Component class="javax.swing.JTextField" name="txtTitle">
           <Properties>
@@ -142,7 +142,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Open Sans" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Price"/>
+            <Property name="text" type="java.lang.String" value="Gi&#xe1;"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
@@ -150,7 +150,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Open Sans" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Title"/>
+            <Property name="text" type="java.lang.String" value="T&#xea;n S&#x1ea3;n ph&#x1ea9;m"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
@@ -158,7 +158,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Open Sans" size="36" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&#x110;&#x1a1;n h&#xe0;ng"/>
+            <Property name="text" type="java.lang.String" value="S&#x1ea3;n ph&#x1ea9;m"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel11">
@@ -177,12 +177,12 @@
             <Property name="text" type="java.lang.String" value="Stockable"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="cbStockable">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
-                <StringItem index="0" value="Ho&#x1ea1;t &#x111;&#x1ed9;ng"/>
-                <StringItem index="1" value="Ng&#x1b0;ng Ho&#x1ea1;t &#x111;&#x1ed9;ng"/>
+                <StringItem index="0" value="Ng&#x1b0;ng Ho&#x1ea1;t &#x111;&#x1ed9;ng"/>
+                <StringItem index="1" value="Ho&#x1ea1;t &#x111;&#x1ed9;ng"/>
                 <StringItem index="2" value=" "/>
               </StringArray>
             </Property>
@@ -196,12 +196,12 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Open Sans" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Price"/>
+            <Property name="text" type="java.lang.String" value="VAT"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtTitle2">
+        <Component class="javax.swing.JTextField" name="txtVAT">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtTitle4">
+        <Component class="javax.swing.JTextField" name="txtSlug">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel13">
           <Properties>
