--- a/src/main/java/com/mycompany/pos/Screens/MainUI.form
+++ b/src/main/java/com/mycompany/pos/Screens/MainUI.form
@@ -152,11 +152,11 @@
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="5" rowCount="4">
-                            <Column editable="true" title="STT" type="java.lang.Integer"/>
-                            <Column editable="true" title="T&#xea;n kh&#xe1;ch h&#xe0;ng" type="java.lang.String"/>
-                            <Column editable="true" title="T&#x1ed5;ng gi&#xe1; tr&#x1ecb; &#x111;&#x1a1;n h&#xe0;ng" type="java.lang.String"/>
-                            <Column editable="true" title="VAT" type="java.lang.String"/>
-                            <Column editable="true" title="Th&#xe0;nh ti&#x1ec1;n" type="java.lang.String"/>
+                            <Column editable="false" title="STT" type="java.lang.Integer"/>
+                            <Column editable="false" title="T&#xea;n kh&#xe1;ch h&#xe0;ng" type="java.lang.String"/>
+                            <Column editable="false" title="SDT" type="java.lang.String"/>
+                            <Column editable="false" title="Ng&#xe0;y" type="java.lang.String"/>
+                            <Column editable="false" title="T&#xf4;ng gi&#xe1; tr&#x1ecb; &#x111;&#x1a1;n h&#xe0;ng" type="java.lang.Long"/>
                           </Table>
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -219,7 +219,7 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnChinhSuaDonHang">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Ch&#x1ec9;nh s&#x1eed;a"/>
+                    <Property name="text" type="java.lang.String" value="Th&#xf4;ng Tin"/>
                     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[70, 20]"/>
                     </Property>
@@ -230,6 +230,9 @@
                       <Dimension value="[70, 20]"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnChinhSuaDonHangActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnThemDonHang">
                   <Properties>
@@ -274,6 +277,8 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
+                                  <Component id="btnThemSanPham1" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="btnThemSanPham" min="-2" pref="112" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="btnChinhSuaSanPham" min="-2" pref="112" max="-2" attributes="0"/>
@@ -294,6 +299,7 @@
                               <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="btnChinhSuaSanPham" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                               <Component id="btnThemSanPham" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="btnThemSanPham1" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jScrollPane2" pref="645" max="32767" attributes="0"/>
@@ -410,6 +416,23 @@
                     </Component>
                   </SubComponents>
                 </Container>
+                <Component class="javax.swing.JButton" name="btnThemSanPham1">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Nh&#x1ead;p h&#xe0;ng"/>
+                    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[70, 20]"/>
+                    </Property>
+                    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[70, 20]"/>
+                    </Property>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[70, 20]"/>
+                    </Property>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemSanPham1ActionPerformed"/>
+                  </Events>
+                </Component>
               </SubComponents>
             </Container>
             <Container class="javax.swing.JPanel" name="jPanel6">
@@ -436,6 +459,8 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
+                                  <Component id="btnThemThuongHieu1" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="btnThemThuongHieu" min="-2" pref="112" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="btnChinhSuaThuongHieu" min="-2" pref="112" max="-2" attributes="0"/>
@@ -456,6 +481,7 @@
                               <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="btnChinhSuaThuongHieu" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                               <Component id="btnThemThuongHieu" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="btnThemThuongHieu1" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jScrollPane3" pref="645" max="32767" attributes="0"/>
@@ -563,6 +589,23 @@
                     </Component>
                   </SubComponents>
                 </Container>
+                <Component class="javax.swing.JButton" name="btnThemThuongHieu1">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Nh&#x1ead;p h&#xe0;ng"/>
+                    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[70, 20]"/>
+                    </Property>
+                    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[70, 20]"/>
+                    </Property>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[70, 20]"/>
+                    </Property>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemThuongHieu1ActionPerformed"/>
+                  </Events>
+                </Component>
               </SubComponents>
             </Container>
             <Container class="javax.swing.JPanel" name="jPanel7">
